# pretty-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  assets.cmake  build.bash  build.bat  custom.cmake  external.cmake  imgui.ini  install_go.bash  install_go.bat  pretty-engine.sublime-project  pretty-engine.sublime-workspace  shaders.cmake  test.cmake
.github/workflows/: cmake-multi-platform.yml
PropertyEditor/: EditorPropertyBool.hpp  EditorPropertyMesh.hpp  EditorPropertyNumber.hpp  EditorPropertyString.hpp  PropertyEditor.h  README.md
RenderFeatures/: RF_Light.hpp  RenderFeatures.cpp  RenderFeatures.hpp  RenderFeaturesList.csv  template.hxx
assets/: README.md
assets/ENGINE_BUILTIN/: config.toml  editor_config.toml  example.md  uniforms.csv
assets/ENGINE_PUBLIC/: RenderFeaturesList.csv  assets.db  debug_localization.csv  demo_object.blend  demo_object.blend1  demo_object.fbx  editor.csv  engine_todo.toml  localization.csv  settings.toml  someLogic.flow
assets/ENGINE_PUBLIC/data/: engine.db
assets/ENGINE_PUBLIC/worlds/: editor.toml  game.toml
components/: BaseCharacterController.hpp  Light.hpp  LocalizationEditor.hpp  MyComponent.hpp  Physical.hpp  Render.hpp  components.hpp  list.csv  template.hxx
custom/: Editor.hpp  custom.cpp  custom.hpp  template.hxx
debug/: main.cpp
editor/: main.cpp  source.txt
entities/: Editor.hpp  Empty.hpp  custom.hpp  list.csv  template.hxx
game/: custom.cmake  main.cpp  source.txt
include/PrettyEngine/: Collision.hpp  DebugDust.hpp  EngineContent.hpp  FileUtils.hpp  GraphicAPI.hpp  Graphics.hpp  Input.hpp  KeyCode.hpp  PhysicalSpace.hpp  PrettyError.hpp  PrettyGL.hpp  RenderFeature.hpp  UniqueName.hpp  assetManager.hpp  audio.hpp  base.hpp  camera.hpp  collider.hpp  command.hpp  data.hpp  debug.hpp  dynamicObject.hpp  editor.hpp  engine.hpp  entity.hpp  event.hpp  file.hpp  gc.hpp  gl.hpp  id.hpp  light.hpp  localization.hpp  math.hpp  mesh.hpp  physics.hpp  physicsEngine.hpp  reflect.hpp  render.hpp  serial.hpp  settings.hpp  (+13 more)
include/PrettyEngine/assets/: bin.hpp  builtin.hpp
include/PrettyEngine/debug/: DebugDust.hpp  debug.hpp
include/PrettyEngine/editor/: PropertyEditor.hpp  editor.hpp
include/PrettyEngine/render/: Graphics.hpp  PrettyGL.hpp  RenderFeature.hpp  camera.hpp  light.hpp  mesh.hpp  render.hpp  visualObject.hpp
project_utils/: generate.py  utils.py
shaders/: fragment.frag  vertex.vert
source/: UniqueName.cpp  assetsManager.cpp  audio.cpp  base.cpp  command.cpp  physics.cpp  physicsEngine.cpp  render.cpp
test/: tests.cpp
test/Collider/: test.cpp
test/UniqueName/: test.cpp
test/simplex/: tests.cpp
tools/: UnitTest.pyw  build.go  clearAssets.go  dependencies.go  generateFiles.go  go.mod  tools.go
tools/clearAssets/: clearAssets.go  go.mod
tools/dependencies/: dependencies.go  go.mod
tools/generateFiles/: generateFiles.go
